# bioinformatics-report-builder

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bioinformatics_report/: __init__.py  cli.py  report.py
bioinformatics_report/templates/: _extension.yml  bioinformatics-report.css  footer.html  sidebar.html  styles.html  template.qmd
examples/: figure_panel_demo.py  generic_company_report.py  metagenomics_report.py  multi_omics_report.py  single_cell_report.py  spatial_transcriptomics_report.py
tests/: test_report.py
