[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "bioinformatics-report-builder"
dynamic = ["version"]
description = "A general-purpose Quarto template and Python builder for branded HTML reports."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Kaderali Lab", email = "bioinfo@uni-greifswald.de" }
]
keywords = ["bioinformatics", "quarto", "report", "html", "template"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.optional-dependencies]
dev = ["matplotlib", "numpy", "markdown"]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/Yasas1994/bioinformatics-report-builder"

[project.scripts]
bioinformatics-report = "bioinformatics_report.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bioinformatics_report*"]
exclude = ["tmp_*", "examples", "tests"]

[tool.setuptools.package-data]
bioinformatics_report = ["templates/*"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
